@@ -34,6 +34,7 @@ Roundcube Webmail ContextMenu
  * Add menus to Settings screens
  * Add contextmenu_mouseover_timeout config option to override default mouseover timeout for submenus
  * Extend activate hook, now returns JSON rather than Boolean
+ * Make menu button inactive if all subactions are inactive (req RC ab6b651)
 
 Version 2.3 (2017-06-14, rc-1.3)
 =================================================
